src/objects/Physical_Surface__c.object
<CustomObject>
    <description>A collection of physically contiguous Install Locations sharing the same pitch and azimuth, with the same structural members and surface type, and located on the same Property.</description>
    <fields>
        <fullName>Default_Mounting_Type__c</fullName>
        <formula>if(ISPICKVAL(Surface_Type__c, &apos;Flat Concrete Tile&apos;), &apos;Flush Mounted on flat concrete tile, penetrations&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Curved Concrete Tile&apos;), &apos;Flush Mounted on curved concrete tile, penetrations&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Metal Seam&apos;), &apos;Clamped on Metal Seam&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Metal Corrogated&apos;), &apos;Attached Through Metal Panel Roof&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Soil&apos;), &apos;Ground Mount&apos;, &apos;&apos;)
&amp;
if(
    (ISPICKVAL(Surface_Type__c, &apos;Light Weight Tile - Requires re-roof&apos;)
       || ISPICKVAL(Surface_Type__c, &apos;Clay Tile - Requires re-roof&apos;))
    , &apos;Flush Mounted on tile roof, requires comp shingle re-roof, penetrations&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Concrete Tile&apos;), &apos;Flush Mounted on Concrete Tile Roof, penetrating&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Slate Shingle&apos;), &apos;Flush Mounted on Slate Shingle, penetrating&apos;, &apos;&apos;)
&amp;
if(
    (ISPICKVAL(Surface_Type__c, &apos;Rubber Membrane&apos;) 
      || ISPICKVAL(Surface_Type__c, &apos;Other&apos;)
      || ISPICKVAL(Surface_Type__c, &apos;Rolled Asphalt&apos;) 
    ) &amp;&amp;
        (if(Mounting_Plane_is_Not_Parallel__c,  Mounting_Plane_Tilt__c, Surface_Tilt__c)) &lt;= 5
    , &apos;Ballasted System&apos;, &apos;&apos;)
&amp;
if(ISPICKVAL(Surface_Type__c, &apos;Asphalt Shingle&apos;) 
    &amp;&amp; (if(Mounting_Plane_is_Not_Parallel__c,  Mounting_Plane_Tilt__c, Surface_Tilt__c)) &gt; 9
   , &apos;Flush Mounted on pitched roof, penetrating&apos;, &apos;&apos;)
&amp;
if(
    (ISPICKVAL(Surface_Type__c, &apos;Rubber Membrane&apos;)
      || ISPICKVAL(Surface_Type__c, &apos;Other&apos;)
      || ISPICKVAL(Surface_Type__c, &apos;Rolled Asphalt&apos;)
    ) &amp;&amp; 
        (if(Mounting_Plane_is_Not_Parallel__c,  Mounting_Plane_Tilt__c, Surface_Tilt__c)) &gt; 5
    , &apos;Flush Mounted on Flat Roof, penetrating&apos;, &apos;&apos;)</formula>
        <label>Default Mounting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Mounting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Mounting</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Physical Surfaces</relationshipLabel>
        <relationshipName>Physical_Surfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Surface_Azimuth__c</fullName>
        <label>Last Surface Azimuth</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Surface_Tilt__c</fullName>
        <label>Last Surface Tilt</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Physical Surface was generated automatically from legacy data.  It is not a true representation of a Physical Surface.</inlineHelpText>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mounting_Allignment__c</fullName>
        <label>Mounting Allignment</label>
        <picklist>
            <picklistValues>
                <fullName>Flush</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tilted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mounting_Plane_Azimuth__c</fullName>
        <label>Mounting Plane Azimuth</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mounting_Plane_Tilt__c</fullName>
        <label>Mounting Plane Tilt</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mounting_Plane_is_Not_Parallel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mounting Plane is Not Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <label>Number of Stories</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outbuilding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outbuilding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_Surface_Assigned_Letter__c</fullName>
        <label>Physical Surface Assigned Letter</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Physical Surfaces</relationshipLabel>
        <relationshipName>Physical_Surfaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Roof_Angle__c</fullName>
        <label>Roof Angle</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structural_Members__c</fullName>
        <label>Structural Members</label>
        <picklist>
            <picklistValues>
                <fullName>Steel Beam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Rafters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Truss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suneye_Tilt_and_Orien_Factor__c</fullName>
        <label>Suneye Tilt and Orien Factor</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Surface_Azimuth__c</fullName>
        <label>Surface Azimuth</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Tilt__c</fullName>
        <label>Surface Tilt</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Type__c</fullName>
        <label>Surface Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asphalt Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Tile - Requires re-roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curved Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Weight Tile - Requires re-roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Corrogated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Seam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolled Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trenching_Dist_to_Intercon_Pt_ft__c</fullName>
        <label>Trenching Dist. to Intercon. Pt.(ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Physical Surface</label>
    <nameField>
        <label>Physical Surface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physical Surfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mounting_Plane_Not_Parallel_unchecked</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Mounting_Plane_is_Not_Parallel__c) &amp;&amp; 
(

  NOT(ISBLANK(Mounting_Plane_Tilt__c)) 
  || 
  NOT(ISBLANK(Mounting_Plane_Azimuth__c)) 

)</errorConditionFormula>
        <errorMessage>&quot;Mounting Plane Not Parallel&quot; field must be checked when entering any value into the Mounting Plane Tilt and Azimuth.  Either check the checkbox, or clear the values of these fields (highlight the number and delete).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mounting_Plane_Tilt_Azimuth_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Mounting_Plane_is_Not_Parallel__c &amp;&amp; (ISBLANK( Mounting_Plane_Tilt__c ) || ISBLANK( Mounting_Plane_Azimuth__c ))</errorConditionFormula>
        <errorMessage>Mounting Plane Tilt and Azimuth are required when the &quot;Mounting Plane Not Parallel&quot; field is checked.</errorMessage>
    </validationRules>
</CustomObject>